[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
  "scikit-build-core",
  "cmake>=3.27.0",
  "ninja",
  "pybind11>=2.13.0",
  "pytest>=7.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "fourier_mellin"
version = "0.1.3"
description = "Image Registration with Fourier Mellin using OpenCV"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.7"
authors = [
  { name = "htoik", email = "henrik.toikka@aalto.fi" }
]
urls = { "Homepage" = "https://www.github.com/htoik/fourier-mellin" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "numpy",
  "opencv-python"
]

[tool.setuptools]
py-modules = ["fourier_mellin"]
include-package-data = true
zip-safe = false
